# steno

./: .build.el  .cljfmt.edn  .cljstyle  .ent.el  .envrc  .envrc.local.example  .gitignore  AGENTS.md  GEMINI.md  Notebook.org  README.org  bb.edn  flake.nix  project.clj  pyproject.toml  scratch.clj  template.txt
.agents/skills/architectural-decision-records/: SKILL.md  preferences.md
.agents/skills/c4-diagrams/: SKILL.md  templates.md
.agents/skills/gherkin-authoring/: SKILL.md
.agents/skills/openspec-git-discipline/: SKILL.md
.opencode/agent/: adversarial-author.md  adversarial-reviewer.md
.opencode/commands/: opsx-bulk-apply.md
.opencode/skills/adversarial-authoring/: SKILL.md
.opencode/skills/openspec-bulk-apply-change/: SKILL.md
dev/resources/: dev.edn
doc/: Dictionary.org
githooks/: prepare-commit-msg
hooks/: pre-push
openspec/: config.yaml
openspec/changes/classification-translator/: design.md  proposal.md  tasks.md
openspec/changes/classifier-translator/: .openspec.yaml  adr.md  design.md  proposal.md  tasks.md
openspec/schemas/intent-driven/: README.md  schema.yaml
resources/: config.yml  diff-references.edn  freq-references.edn  freq-refsequences.edn
resources/corpus/a/: template-01-04-1.edn  template-02-00-0.edn  template-02-01-1.edn  template-03-00-1.edn  template-04-03-1.edn  template-05-01-0.edn  yoga1-00-14-4.edn  (+8 more)
resources/steno/: config.edn
src/: skeletonization.py  thinning.py
src/steno/: __init__.py  converter.lpy  core.clj  core.lpy  corpus.clj  corpus.lpy  extractor.lpy  image.clj  image_processor.lpy  imageprocessor.lpy  main.clj  page.clj  picture.clj  reference_sequences.lpy  show.lpy  spec.lpy  translator.lpy  utils.lpy  word.clj
test/resources/: corpus-orig.edn  corpus-template.edn  corpus.edn  orig.txt  template.txt
test/steno/: core_test.clj  page_test.clj  picture_test.clj  translator_test.lpy  word_test.clj
(+161 files in other folders)
