[project]
name = "steno"
version = "0.1.0"
description = "steno is a project to digitize stenographic writings"
authors = [{ name = "Dan Pomohaci", email = "dan.pomohaci@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "basilisp>=0.3.5",
    "opencv-python>=4.10.0.84",
]

[project.scripts]
steno = "steno:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steno"]

