[project]
name = "steno"
version = "0.1.0"
description = "steno is a project to digitize stenographic writings"
authors = [{ name = "Dan Pomohaci", email = "dan.pomohaci@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "basilisp-pprint>=0.1.1",
    "basilisp>=0.3.5",
    "matplotlib>=3.10.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "scikit-image>=0.25.0",
    "scipy>=1.15.0",
]

[project.scripts]
steno = "steno:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steno"]

