[project]
name = "steno"
version = "1.1"
description = "steno is a project to digitize stenographic writings"
authors = [{ name = "Dan Pomohaci", email = "dan.pomohaci@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "basilisp>=0.4.0",
    "matplotlib>=3.10.0",
    "opencv-python>=4.10.0.84",
    "pyaml-env>=1.2.2",
    "pytest>=8.4.1",
    "scikit-image>=0.25.0",
]

[project.scripts]
steno = "steno:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steno"]

[tool.pytest.ini_options]
# addopts = "-s --no-header --no-summary" # force cmd flags
testpaths = [ # what directories contain tests
    "test",
]